--- a/.gitignore
+++ b/.gitignore
@@ -21,14 +21,14 @@ docker-compose.yml
 # assets/scss/main-min.css
 
 #Files hide
-# changelog.todo
-# countdown.html
-# qrCodeGenerator.html
-# assets/js/main.js
-# assets/js/moment.js
-# assets/js/popper.js
-# assets/js/qrCode.js
-# assets/json/project.json
-# assets/scss/main.css
-# assets/scss/main.css.map
-# assets/scss/main.scss
+changelog.todo
+countdown.html
+qrCodeGenerator.html
+assets/js/main.js
+assets/js/moment.js
+assets/js/popper.js
+assets/js/qrCode.js
+assets/json/project.json
+assets/scss/main.css
+assets/scss/main.css.map
+assets/scss/main.scss
