Change added to update old PLOG 1.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ qrCodeGenerator.html
 assets/js/main.js
 assets/js/moment.js
 assets/js/popper.js
-assets/js/qrCode.js
+# assets/js/qrCode.js
 assets/json/project.json
 assets/scss/main.css
 assets/scss/main.css.map
