--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,3 @@
-# Local development
-*.env
-*.dev
-.DS_Store
-
-# Docker
-Dockerfile
-docker-compose.yml
-
-#Test
-0HN0/
-# find . -type f -name '._*' -delete
-# git rm -r --cached .
-
 #Files not to change for github display
 # assets/css/bootstrap.css
 # assets/js/bootstrap.js
@@ -32,3 +18,35 @@ assets/json/project.json
 assets/scss/main.css
 assets/scss/main.css.map
 assets/scss/main.scss
+
+# Ignore all ._* files
+._*
+
+*.env
+*.dev
+.DS_Store
+
+# Docker
+Dockerfile
+docker-compose.yml
+
+# Test
+0HN0/
+# find . -type f -name '._*' -delete
+# git rm -r --cached .
+
+# To Do Tasks
+# requestLog.todo
+
+# If Not For Public
+robots.txt
+manifest.webapp
+manifest.json
+humans.txt
+dictionary.md
+
+# SASS CSS
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
