move common js to saperate files

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ changelog.todo
 countdown.html
 qrCodeGenerator.html
 assets/js/main.js
+assets/js/PLOG/common.js
 assets/js/moment.js
 assets/js/popper.js
 # assets/js/qrCode.js
