Move timelog js

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ countdown.html
 qrCodeGenerator.html
 assets/js/main.js
 assets/js/PLOG/common.js
+assets/js/PLOG/TIMELOG/timelog.js
 assets/js/moment.js
 assets/js/popper.js
 # assets/js/qrCode.js
