New time tracker updated and move to sepearate js

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ assets/js/PLOG/TIMELOG/timelog.js
 assets/js/PLOG/COPYPASTE/passwordgen.js
 assets/js/PLOG/COPYPASTE/wordgen.js
 assets/js/PLOG/COPYPASTE/lorem-ipsum.js
+assets/js/PLOG/GEARUP/time-traker.js
 assets/js/moment.js
 # assets/js/popper.js
 # assets/js/qrCode.js
