--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ assets/js/PLOG/COPYPASTE/passwordgen.js
 assets/js/PLOG/COPYPASTE/wordgen.js
 assets/js/PLOG/COPYPASTE/lorem-ipsum.js
 assets/js/PLOG/GEARUP/time-traker.js
+assets/js/PLOG/GEARUP/qr-code-gene.js
 assets/js/moment.js
 # assets/js/popper.js
 # assets/js/qrCode.js
