--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ assets/js/PLOG/COPYPASTE/lorem-ipsum.js
 assets/js/PLOG/GEARUP/time-traker.js
 assets/js/PLOG/GEARUP/qr-code-gene.js
 assets/js/PLOG/GEARUP/file-creator.js
+assets/js/PLOG/GEARUP/transfer-links.js
 assets/js/moment.js
 # assets/js/popper.js
 assets/js/qrCodeStyling.js
